feat[pages and layout]: add home and about page.

--- a/pages/portfolio/assets/css/style.css
+++ b/pages/portfolio/assets/css/style.css
@@ -6,6 +6,7 @@
     --bg--black-50: #e8dfec;
     --text-black-900: #302e4d;
     --text-black-700: #504370;
+    --skin-color: #ec1839;
 }
 
 body {
@@ -58,12 +59,16 @@ ul {
     margin: auto;
 }
 
-.row {
+.row2 {
     display: flex;
     flex-wrap: wrap;
     margin-left: -15px;
     margin-right: -15px;
     position: relative;
+}
+
+.dark {
+    box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
 }
 
 
@@ -208,104 +213,65 @@ ul {
     display: flex;
     color: var(--text-black-900);
 
+}
 
-        .row {
-        display: flex;
-        flex-wrap: wrap;
-        margin-left: -15px;
-        margin-right: -15px;
+.section.container {
+    margin-top: 100px;
+    margin-bottom: 70px;
+}
+
+
+.section-title
+{
+
+padding-top: 60px;
+max-width: 100%;
+flex: 0 0 100%;
+margin-top: 5px;
+margin-bottom: 60px;
+
+    h2 {
+        font-size: 35px;
+        color: var(--text-black-900);
+        font-weight: 700;
         position: relative;
-        }
-       
-        .home-info {
-            flex: 0 0 60%;
-            max-width: 60%;
-
-            h3.hello {
-                font-size: 25px;
-                margin: 15px 0;
-            
-                > span {
-                    font-family: "Clicker Script",cursive;
-                    font-size: 40px;
-                    font-weight: 700;
-                    color: var(--skin-color);
-                    margin-left: 15px;
-                    
-                }
-
-            }
-            
-            h3.profession {
-                font-size: 30px;
-                margin: 15px 0; 
-
-                .typing {
-                    color: var(--skin-color);
-                }
-            }
-
-            p {
-                margin-bottom: 70px;
-                font-size: 20px;
-                color: var(--text-black-700);
-            }
-        }
-
-        .btn {
-            font-size: 16px;
-            font-weight: 500;
-            padding: 12px 35px;
-            background-color:var(--skin-color);
-            color: white;
-            border-radius: 20px;
-            display: inline-block;
-            white-space: nowrap;
-            transition: all 0.3s ease;
-            border:none;
-        }
-
-        .btn:hover {
-            transform:scaleX(1.35s);
-        }
-
-        .home-img  {
-            flex: 0 0 40%;
-            max-width: 40%;
-            text-align: center;
-            position: relative;
-            
-        
-                img {
-             height: 400px;
-             width: 23dvw;
-             border-radius: 5px;
-             margin: auto;
-            }
+    }
+    
+    h2::before {
+        content:'';
+        height: 4px;
+        width: 50px;
+        background-color: var(--skin-color);
+        position:absolute;
+        top: 100%;
+        left: 0;
     }
 
-        .home-img::after {
-            content: '';
-            position: absolute;
-            height: 80px;
-            width: 80px;
-            right: 15px;
-            bottom: 40px;
-            border-bottom: 10px solid var(--skin-color);
-            border-right: 10px solid var(--skin-color);
-        }
+    h2::after {
+        content:'';
+        height: 4px;
+        width: 20px;
+        background-color: var(--skin-color);
+        position:absolute;
+        top: 100%;
+        left: 0;
+        margin-top: 8px;
+    }
 
-        .home-img::before {
-            content: '';
-            position: absolute;
-            height: 80px;
-            width: 80px;
-            left: 15px;
-            top: -35px;
-            border-top: 10px solid var(--skin-color);
-            border-left: 10px solid var(--skin-color);
-        }
 }
+
+
+/* ===== About Section ==== */
+
+.portfolio {
+    flex:
+}
+
+
+
+
+
+
 
 
 
