feat:[layouts and styles]: add layouts and styles in pages

--- a/pages/portfolio/assets/css/style.css
+++ b/pages/portfolio/assets/css/style.css
@@ -263,6 +263,199 @@ margin-bottom: 60px;
 
 /* ===== About Section ==== */
 
+.about {
+    .about-content {
+        flex: 0 0 100%;
+        max-width: 100%;
+
+        .personal-info {
+            flex: 0 0 60%;
+            max-width: 60%;
+            margin-top: 40px;
+
+            .info {
+                flex: 0 0 50%;
+                max-width: 50%;
+
+                 P {
+                    font-weight: 600;
+                    padding: 10px 0;
+                    font-size: 16px;
+                    color: var(--text-black-900);
+                    border-bottom: 1px solid var(--bg--black-50);
+
+                     span {
+                        font-weight: 400px;
+                        color: var(--text-black-700);
+                        margin-left: 4px;
+                        display: inline-block;
+                     }
+                 }
+            }
+        }
+
+        .skills {
+            flex: 0 0 40%;
+            max-width: 40%;
+            margin-top: 40px;
+
+            .skill-item {
+                flex: 0 0 100%;
+                max-width: 100%;
+                margin-bottom: 25px;
+
+                    h5 {
+                        line-height: 40px;
+                        font-weight: 600;
+                        font-size: 16px;
+                        color: var(--text-black-900);
+                        text-transform: capitalize;
+                    }
+
+            .progress {
+                background-color: var(--bg--black-50);
+                height: 7px;
+                border-radius: 4px;
+                width: 100%;
+                position: relative;
+                padding-bottom: 2px;
+                    
+                    .progress-in {
+                        position: absolute;
+                        left: 0;
+                        top: 0;
+                        height: 100%;
+                        border-radius: 4px;
+                        background-color: var(--skin-color);
+                        
+                    }
+                 }
+                
+            .skill-percent {
+                position: absolute;
+                right: 0;
+                color: var(--text-black-900);
+                top: -40px;
+                font-weight: 400;
+                line-height: 40px;
+            }
+
+            }
+        }
+
+
+    }
+    
+    .about-text {
+        flex: 0 0 100%;
+        max-width: 100%;
+        
+        h3 {
+         font-size: 24px;
+         margin-bottom: 15px;
+         font-weight: 700;
+         color: var(--text-black-700);
+
+          span {
+            color: var(--skin-color);
+          }
+        }
+
+        p {
+            font-size: 16px;
+            line-height: 25px;
+            color: var(--text-black-700);
+        }
+
+    }
+
+    .education{
+        max-width: 100%;
+        margin-top: 30px;
+        flex: 100%;
+
+         > h3.title {
+            font-weight: 700;
+            font-size: 22px;
+            margin-bottom: 30px;
+            color: var(--text-black-900);
+         }
+    }
+
+    .timeline-box {
+        flex: 0 0 100%;
+        max-width: 100%;
+        
+
+            .timeline {
+                background-color: var(--bg--black-100);
+                padding: 30px 15px;
+                border: 1px solid var(--bg--black-50);
+                width: 100%;
+                border-radius: 10px;
+                position: relative;
+
+                    .timeline-item {
+                        position: relative;
+                        padding-left: 36px;
+                        padding-bottom: 50px;
+                    }
+
+                    .timeline-item:last-child {
+                        padding-bottom: 0;
+                    }
+                    .timeline-item::before {
+                        content:'';
+                        width: 1px;
+                        position: absolute;
+                        height: 100%;
+                        left: 7px;
+                        top: 0;
+                        background-color: var(--skin-color);
+                    }
+
+                    .circle-dot {
+                        position: absolute;
+                        left: 0;
+                        top: 0;
+                        height: 15px;
+                        width: 15px;
+                        border-radius: 50%;
+                        background-color: var(--skin-color);
+                    }
+
+                    .timeline-date{
+                        font-weight: 400;
+                        font-size: 14px;
+                        margin-bottom: 12px;
+                        color: var(--text-black-700);
+
+                        .fa {
+                            margin-right: 5px;
+                        }
+                    }
+
+                    .timeline-title {
+                        font-weight: 700;
+                        font-size: 18px;
+                        margin-bottom: 15px;
+                        text-transform:capitalize;
+                        color: var(--text-black-900);
+                    }
+
+                    .timeline-text {
+                        line-height: 25px;
+                        font-size: 16px;
+                        text-align: justify;
+                        color: var(--text-black-700);
+                    }
+                
+            }
+    }
+
+    
+}
+
 
 
 
