--- a/assets/css/styleSwitcher.css
+++ b/assets/css/styleSwitcher.css
@@ -12,7 +12,7 @@
     transform: translateX(100%);
 
     &.open {
-        transform: translateX(100%);
+        transform: translateX(-25px);
     }
     .s-icon {
         position: absolute;
@@ -62,7 +62,7 @@
             height:30px;
             width: 30px;
             border-radius: 50%;
-            border: 1px solid red;
+            
         }
     }
 
